# infrabot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker-build.yml  secret-scanning.yml  test.yml
assets/: skybot_inline_policy.json  supervisord.conf
assets/terraform/: .gitignore  provider.tf  provider_local.tf
notebooks/: experiment_parameter_generation.ipynb
scripts/: start_server.sh
src/easycloud/: __init__.py  api.py  cli.py
src/easycloud/ai/: chat.py  config.py  summary.py  terraform_generator.py
src/easycloud/infra_utils/: terraform.py
src/easycloud/utils/: file_cache.py  logging_config.py  parsing.py
src/infrabot/: __init__.py  api.py  cli.py  service.py
src/infrabot/ai/: config.py  diagram_generator.py  output_format.py
src/infrabot/infra_utils/: terraform.py
src/infrabot/utils/: os.py  output_formatter.py
src/skybot/: __init__.py  api.py  cli.py
src/skybot/ai/: chat.py  config.py  summary.py  terraform_generator.py
src/skybot/infra_utils/: terraform.py
src/skybot/utils/: logging_config.py  os.py
tests/: __init__.py  test_cli.py  test_easycloud.py
webapp/: README.md  package-lock.json  package.json  vite.config.ts
webapp/client/src/: main.tsx
webapp/client/src/components/: ErrorDisplay.tsx
webapp/client/src/components/layout/: LeftSidebar.tsx  MainContent.tsx  MainLayout.tsx  RightSidebar.tsx
webapp/client/src/components/ui/: help-modal.tsx  remixicon.tsx
webapp/client/src/context/: ProjectContext.tsx
webapp/client/src/hooks/: useInfrabot.ts
webapp/client/src/lib/: api.ts  queryClient.ts
webapp/client/src/pages/: home.tsx
webapp/server/: routes.ts  vite.ts
