[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skybot"
version = "0.1.0"
description = "Create resource on the cloud with natural language"
readme = "README.md"
authors = [
  {name = "Alaeddine Abdessalem", email = "alaeddine.abdessalem@gmail.com"}
]
maintainers = [
  {name = "Alaeddine Abdessalem", email = "alaeddine.abdessalem@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[tool.poetry]
name = "skybot"
version = "0.1.0"
description = "Create resource on the cloud with natural language"
authors = ["Alaeddine Abdessalem <alaeddine.abdessalem@gmail.com>"]
packages = [{include = "skybot", from = "src"}]

[tool.poetry.dependencies]
python = ">3.10"  # Replace with your Python version
typer = "^0.12.5"
click = "^8.1.7"
openai = "^1.53.0"
litellm = "^1.57.1"

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/alaeddine-13/skybot/issues"
changelog = "https://github.com/alaeddine-13/skybot/blob/master/changelog.md"
homepage = "https://github.com/alaeddine-13/skybot"

#[tool.setuptools]
#package-dir = {"" = "src"}

#[tool.setuptools.package-data]
#"*" = ["*.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# addopts = "-v --cov=skybot --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]


# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[project.scripts]
skybot = "skybot.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

[tool.ruff.isort]
known-first-party = ["skybot"]
